testing some canvas animations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <canvas id="canvas_1"></canvas>
-    <script></script>
+    <script src="./script.js"></script>
 </body>
 </html>
