changed line.js for smoothness

--- a/draw.html
+++ b/draw.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing Animation</title>
+    <link rel="stylesheet" href="./draw.css">
 </head>
 <body>
-    <h1>Starting with draw animation</h1>
+    <canvas class="canvas_2"></canvas>
+    <script src="./draw.js"></script>
 </body>
 </html>
