--- a/draw.html
+++ b/draw.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drawing Animation</title>
+    <title>Draw Animation</title>
     <link rel="stylesheet" href="./draw.css">
 </head>
 <body>
-    <canvas class="canvas_2"></canvas>
+    <canvas id="canvas_2"></canvas>
     <script src="./draw.js"></script>
 </body>
 </html>
