--- a/draw.html
+++ b/draw.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <canvas id="canvas_2"></canvas>
+    <img id="bgimg" src="./asset/kratos-jason-momoa-god-of-war-dark-3840x2160-1481.jpg" alt="kratos">
+    
     <script src="./draw.js"></script>
 </body>
 </html>
