--- a/draw.html
+++ b/draw.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <canvas id="canvas_2"></canvas>
-    <img id="bgimg" src="./asset/kratos-jason-momoa-god-of-war-dark-3840x2160-1481.jpg" alt="kratos">
+    <img id="bgimg" src="./asset/imrs.avif" alt="kratos">
     
     <script src="./draw.js"></script>
 </body>
